--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "ts-node-dev  --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "csv-parse": "^5.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.3",
