--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.3",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
