--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.3",
     "multer": "^1.4.4",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.45",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
