--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,33 @@
-version: "3.7"
+version: "3.9"
 
 services:
+  rentx: #ESSE É O NOME DO SERVICE QUE DEVE ESTAR NO ARQUIVO DE CRIAÇÃO DE CONEXÃO
+    image: postgres
+    container_name: database_ignite
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=ignite
+      - POSTGRES_DB=rentx
+    volumes:
+      - pgdata:/data/postgres
+
   app:
     build: .
     container_name: rentx
+    restart: always
     ports:
       - 3333:3333
+      - 9229:9229 #Você pode inserir essa porta tbm pra poder usar o debug
     volumes:
       - .:/usr/app
+    links:
+      - rentx
+    depends_on:
+      - rentx
+
+volumes:
+  pgdata:
+    driver: local
